--- a/index.html
+++ b/index.html
@@ -27,13 +27,70 @@
             <div class="container">
                 <div class="header__wrap">
                     <a href="index.html" class="header__logo">
-                        Logo
+                        <img src="img/logo.png" alt="">
                     </a>
                     <nav class="header__nav" data-nav>
                         <ul>
                             <li class="menu-item">
-                                <a href="about.html">
-                                    About US
+                                <a href="#">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="menu-item menu-item-has-children">
+                                <a href="#">
+                                    Services
+                                </a>
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a href="#">
+                                            SEO Consultation
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            SEO Audit 
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            On-page SEO
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Off-page SEO
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            SEO Strategy Development
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            SEO Promotion
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            SERM
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Content Marketing
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">
+                                    Portfolio
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">
+                                    Blog
                                 </a>
                             </li>
                         </ul>
@@ -46,7 +103,114 @@
                 </div>
             </div>
         </header>
-        
+        <section class="main">
+            <div class="container">
+                <h1 class="title">
+                    SEO Agency
+                </h1>
+                <p>
+                    High-quality search engine optimization services for successful business endeavours.
+                </p>
+                <a href="#" class="btn">
+                    Let's get started
+                </a>
+            </div>
+        </section>
+        <section class="how">
+            <div class="container">
+                <h2 class="title-l">
+                    How can we be help you?
+                </h2>
+                <p class="how__txt">
+                    Ac nisl at dolor neque, est tortor ultrices vitae lobortis. Purus tortor quisque velit felis. Quis rhoncus 
+                    in tincidunt risus id sit est pulvinar senectus. Aliquam commodo ut risus quis nunc malesuada feugiat 
+                    in. Risus justo habitant fusce eget nec in.
+                </p>
+                <div class="how__wrap">
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#080808"><path d="M7 16.813V10H4.608a2.61 2.61 0 0 0-1.844.76c-.49.487-.764 1.146-.764 1.833v15.56a.86.86 0 0 0 .134.453.87.87 0 0 0 .353.316.88.88 0 0 0 .446.073c.152-.015.3-.07.423-.16l4.478-3.276H19.52a2.42 2.42 0 0 0 .964-.169 2.41 2.41 0 0 0 .816-.537 2.31 2.31 0 0 0 .534-.815c.12-.315.176-.632.164-.96V22h-9.78c-1.384 0-2.7-.546-3.7-1.52A5.17 5.17 0 0 1 7 16.813zM27.467 4H12.62a2.63 2.63 0 0 0-1.853.762A2.6 2.6 0 0 0 10 6.602v9.796c0 .7.276 1.352.767 1.84A2.63 2.63 0 0 0 12.62 19h11.714l4.295 3.83a.89.89 0 0 0 .424.165.88.88 0 0 0 .45-.069.87.87 0 0 0 .498-.781V6.602a2.59 2.59 0 0 0-.736-1.81A2.63 2.63 0 0 0 27.467 4z"/></svg>
+                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                SEO Consultation
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"><path d="M27.703 14.176l-2.683-.8a9.31 9.31 0 0 0-.761-1.864l1.313-2.456c.05-.093.067-.2.05-.303a.49.49 0 0 0-.14-.273L23.57 6.56a.49.49 0 0 0-.577-.088l-2.442 1.304a9.31 9.31 0 0 0-1.89-.8l-.8-2.648c-.034-.098-.098-.182-.183-.24a.49.49 0 0 0-.29-.087h-2.707a.49.49 0 0 0-.464.344l-.8 2.64a9.32 9.32 0 0 0-1.906.8L9.11 6.488a.49.49 0 0 0-.577.088L6.587 8.472a.49.49 0 0 0-.088.576l1.297 2.4a9.3 9.3 0 0 0-.801 1.896l-2.65.8a.49.49 0 0 0-.344.464v2.704a.49.49 0 0 0 .344.464l2.667.8a9.29 9.29 0 0 0 .801 1.864l-1.313 2.512a.49.49 0 0 0 .088.576L8.5 25.44a.49.49 0 0 0 .577.088l2.474-1.32c.585.316 1.203.568 1.842.752l.8 2.696c.03.1.092.186.176.248a.49.49 0 0 0 .289.096h2.707a.49.49 0 0 0 .464-.344l.8-2.704c.634-.185 1.246-.437 1.826-.752l2.5 1.328a.49.49 0 0 0 .577-.088l1.914-1.912a.49.49 0 0 0 .14-.273c.016-.104-.002-.2-.052-.303l-1.33-2.48c.318-.582.573-1.196.76-1.832l2.7-.8a.49.49 0 0 0 .344-.464v-2.728a.49.49 0 0 0-.296-.472zM16.036 20.4c-.87 0-1.723-.258-2.447-.74a4.4 4.4 0 0 1-1.622-1.975c-.333-.804-.42-1.69-.25-2.542a4.4 4.4 0 0 1 1.205-2.253c.616-.615 1.4-1.034 2.255-1.204a4.41 4.41 0 0 1 2.545.25c.805.333 1.493.897 1.977 1.62s.742 1.574.742 2.444a4.4 4.4 0 0 1-1.29 3.111c-.826.825-1.946 1.29-3.114 1.29z" fill="#080808"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                SEO Audit
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum  
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"><rect x="4" y="5" width="24" height="22" rx="2" fill="#080808"/><g fill="#f7f7f7"><rect x="12" y="8" width="13" height="3" rx="1"/><rect x="7" y="8" width="3" height="3" rx="1"/></g></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                On-page SEO
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#080808" fill-rule="evenodd"><path d="M17.94 5.94c.922-.922 2.172-1.44 3.475-1.44h.343c3.17 0 5.743 2.57 5.743 5.743a5.74 5.74 0 0 1-1.682 4.06l-5.76 5.757L19 19l1.06 1.062-.023.023-.036.034-.1.098-.365.286c-.3.214-.746.485-1.304.67a3.98 3.98 0 0 1-2.05.142c-.8-.158-1.55-.568-2.235-1.254a1.5 1.5 0 1 1 2.121-2.121c.314.314.555.404.702.434.158.032.327.016.513-.046a1.98 1.98 0 0 0 .509-.266l.143-.112.022-.02 5.747-5.747c.514-.514.803-1.212.803-1.94 0-1.515-1.228-2.743-2.743-2.743h-.343a1.92 1.92 0 0 0-1.354.56l-.5.5a1.5 1.5 0 0 1-2.121-2.121l.5-.5zm-3.88 20c-.922.922-2.172 1.44-3.475 1.44h-.343C7.07 27.4 4.5 24.82 4.5 21.647a5.74 5.74 0 0 1 1.682-4.06l5.757-5.757L13 12.9l-1.06-1.062.023-.023.036-.034.1-.098.364-.286a4.97 4.97 0 0 1 1.304-.671 3.98 3.98 0 0 1 2.05-.142c.8.158 1.55.568 2.235 1.254a1.5 1.5 0 0 1-2.121 2.121c-.314-.314-.555-.404-.702-.434-.158-.032-.326-.016-.513.046a1.98 1.98 0 0 0-.509.266l-.143.112-.022.02-5.747 5.747c-.514.514-.803 1.212-.803 1.94 0 1.515 1.228 2.743 2.743 2.743h.343c.508 0 .995-.202 1.353-.56l.5-.5a1.5 1.5 0 1 1 2.121 2.121l-.5.5z"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                Off-page SEO
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#080808" fill-rule="evenodd"><path d="M4.134 26.12a1.5 1.5 0 0 1 .745-1.986l13.57-6.168a3.5 3.5 0 0 0 2.052-3.186V9.84l-2.003 1.78a1.5 1.5 0 0 1-1.993-2.242l4.5-4a1.5 1.5 0 0 1 1.993 0l4.5 4a1.5 1.5 0 1 1-1.993 2.242L23.5 9.84v4.94a6.5 6.5 0 0 1-3.81 5.917l-13.57 6.17a1.5 1.5 0 0 1-1.986-.745zM4.44 5.44a1.5 1.5 0 0 1 2.121 0L8 6.88l1.44-1.44a1.5 1.5 0 0 1 2.121 2.121L10.12 9l1.44 1.44a1.5 1.5 0 1 1-2.121 2.121L8 11.12l-1.44 1.44a1.5 1.5 0 0 1-2.121-2.121L5.88 9 4.44 7.56a1.5 1.5 0 0 1 0-2.121z"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                SEO Strategy Development
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"><g fill="#080808"><path d="M4 16a3 3 0 0 1 3-3h11v6H7a3 3 0 0 1-3-3z"/><path d="M9.617 17.682a2 2 0 0 1 0-3.365L19.46 8a1 1 0 0 1 1.54.832V23.17a1 1 0 0 1-1.541.841l-9.842-6.327zM8 22h3v2a1 1 0 0 1-1 1h-.28a1 1 0 0 1-.949-.684L8 22z"/></g><path d="M24.44 17.44a1.5 1.5 0 1 0 2.121 2.121l-2.12-2.12zm2.12-5a1.5 1.5 0 1 0-2.121 2.121l2.12-2.12zM25 16c0 .414-.14.782-.302 1.068a2.48 2.48 0 0 1-.213.315l-.055.065c.01-.01.01-.01 1.07 1.05l1.06 1.06.015-.015.02-.022.06-.063.172-.202a5.49 5.49 0 0 0 .475-.701c.337-.59.698-1.47.698-2.557h-3zm.5-2.5l-1.06 1.06-.01-.01.055.065a2.48 2.48 0 0 1 .213.315c.163.286.302.654.302 1.068h3c0-1.086-.36-1.968-.698-2.557a5.49 5.49 0 0 0-.475-.701l-.172-.202-.06-.063-.02-.022-.015-.015A210.86 210.86 0 0 0 25.5 13.5z" fill="#000"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                SEO Promotion
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"><path d="M14.89 5.808a1.17 1.17 0 0 1 2.219 0l2.033 6.274c.156.482.604.808 1.11.808h6.58c1.13 0 1.6 1.45.686 2.116l-5.323 3.877a1.17 1.17 0 0 0-.424 1.308l2.033 6.274c.35 1.077-.88 1.973-1.795 1.308l-5.323-3.877c-.41-.298-.962-.298-1.37 0L9.99 27.77c-.914.666-2.144-.23-1.795-1.308L10.23 20.2a1.17 1.17 0 0 0-.424-1.308l-5.323-3.877C3.57 14.34 4.04 12.9 5.17 12.9h6.58c.505 0 .953-.326 1.11-.808l2.033-6.274z" fill="#080808"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                SERM
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="how__card">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#080808"><path d="M23 17.136C23 20.525 16.5 26 16.5 26S10 20.525 10 17.136 12.9 11 16.5 11s6.5 2.747 6.5 6.136z"/><path d="M13 20h7v5a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2v-5z"/><circle cx="8.5" cy="9.5" r="1.5"/><circle cx="24.5" cy="9.5" r="1.5"/><circle cx="16.5" cy="6.5" r="1.5"/></svg>                        <div class="how__card-txt">
+                            <h4 class="title-s">
+                                Content Marketing
+                            </h4>
+                            <p>
+                                Praesent ut feugiat bibendum adipiscing pharetra. Id nunc nibh leo convallis quam dictum 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="container">
                 
