--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p>
                     High-quality search engine optimization services for successful business endeavours.
                 </p>
-                <a href="#" class="btn">
+                <a href="#start" class="btn" data-scroll>
                     Let's get started
                 </a>
             </div>
@@ -661,9 +661,85 @@
                 </div>
             </div>
         </section>
+        <section class="start" id="start">
+            <div class="container">
+                <div class="title-l">
+                    Let's get started 
+                </div>
+                <p>
+                    Unleash your true search potential and dominate the first page of Google.
+                </p>
+                <form action="post" class="start__form">
+                    <div class="start__form-wrap">
+                        <input type="text" name="name" placeholder="Your Name" class="start__form-inp">
+                    </div>
+                    <div class="start__form-wrap">
+                        <input type="email" name="email" placeholder="E-mail" class="start__form-inp">
+                    </div>
+                    <div class="start__form-tawrap">
+                        <textarea name="mess" placeholder="Tell us about the project" class="start__form-inp start__form-ta"></textarea>
+                    </div>
+                    <div class="start__form-wrapb">
+                        <input type="submit" value="Send message" class="btn send-btn">
+                    </div>
+                </form>
+            </div>
+        </section>
         <footer class="footer">
             <div class="container">
-                
+                <div class="title-l">
+                    We are located in Minsk, work in an office and collaborate with projects all over the world
+                </div>
+                <div class="footer__wrap">
+                    <div class="footer__cont">
+                        <div class="footer__item">
+                            <a href="tel:+375333112776">
+                                +37 533 311 27 76 
+                            </a>
+                            on Telegram, WhatsApp, Viber
+                        </div>
+                        <div class="footer__item">
+                            <a href="mailto:dmitry.lejko@yandex.ru">
+                                dmitry.lejko@yandex.ru
+                            </a>
+                            e-mail
+                        </div>
+                        <div class="footer__item">
+                            <a href="skype:frEEl96">
+                                frEEl96
+                            </a>
+                            skype
+                        </div>
+                    </div>
+                    <div class="footer__soc">
+                        <a href="#" class="footer__soc-link" data-soc>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fff"  xmlns:v="https://vecta.io/nano"><path d="M3.063 15H.23V4.434h2.832V15zm-3-13.3A1.4 1.4 0 0 1 .484.655c.286-.273.674-.4 1.162-.4.482 0 .866.137 1.152.4a1.38 1.38 0 0 1 .43 1.045c0 .43-.146.78-.44 1.055-.286.273-.667.4-1.143.4s-.86-.137-1.152-.4A1.4 1.4 0 0 1 .064 1.7zm7.93 2.734l.088 1.22C8.837 4.7 9.85 4.238 11.12 4.238c1.12 0 1.953.33 2.5.986s.827 1.64.84 2.95V15h-2.822V8.242c0-.6-.13-1.032-.4-1.3s-.693-.4-1.3-.4a1.93 1.93 0 0 0-1.787 1.016V15H5.338V4.434h2.656z"/></svg>
+                        </a>
+                        <a href="#" class="footer__soc-link" data-soc>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="16" fill="none"  xmlns:v="https://vecta.io/nano"><path d="M6.78 14.21l.28-4.23 7.68-6.92c.34-.3-.07-.46-.52-.2l-9.48 6-4.1-1.3c-.88-.25-.9-.86.2-1.3L16.81.1c.73-.33 1.43.18 1.15 1.3l-2.72 12.8c-.2.9-.74 1.13-1.5.7L9.6 11.86l-2 1.93c-.23.23-.42.42-.83.42z" fill="#fff"/></svg>
+                        </a>
+                        <a href="#" class="footer__soc-link" data-soc>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="16" fill="none"  xmlns:v="https://vecta.io/nano"><path d="M1.855 16V7.504H.283v-2.07h1.572v-.898c0-1.185.34-2.103 1.016-2.754.684-.658 1.637-.986 2.86-.986.39 0 .87.065 1.436.195l-.03 2.187c-.234-.06-.52-.088-.86-.088-1.06 0-1.592.498-1.592 1.494v.85h2.1v2.07h-2.1V16H1.855z" fill="#fff"/></svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__bottom">
+                    <span>
+                        LEJ.ME | 590206770
+                    </span>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                Payment and refund policy
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Public offer agreement
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </div>
