--- a/blog-info.html
+++ b/blog-info.html
@@ -104,53 +104,85 @@
                 </div>
             </div>
         </header>
-        <section class="start contact">
+        <section class="art-main" data-mainh>
+            <span class="art-main__label">
+                SEO
+            </span>
+            <h1 class="title-l">
+                Лучший SEO софт — Инструменты которыми я пользуюсь для продвижения сайтов
+            </h1>
+            <span class="page-bl__meta">
+                <span class="page-bl__name">
+                    by
+                    <a href="#">
+                        dmitry leiko
+                    </a>
+                </span>
+                <span class="page-bl__sep">
+                    -
+                </span>
+                <span class="page-bl__date">
+                    22 July 2020 
+                </span>
+                <span class="page-bl__sep">
+                    -
+                </span>
+                <span class="page-bl__date">
+                    2 min read
+                </span>
+            </span>
+        </section>
+        <section class="art">
             <div class="container">
-                <a href="#" onclick="history.go(-1); return false;" class="back">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="7" fill="none"><path d="M1 3.5l-.325-.38a.5.5 0 0 0 0 .759L1 3.5zM4.825.88A.5.5 0 1 0 4.175.12l.65.76zm-.65 6a.5.5 0 0 0 .651-.759l-.65.76zM10.5 4a.5.5 0 1 0 0-1v1zm-9.175-.12l3.5-3-.65-.76-3.5 3 .65.76zm-.65 0l3.5 3 .65-.76-3.5-3-.65.76zM1 4h9.5V3H1v1z" fill="#737373"/></svg>
-                    Back
-                </a>
-                <h1 class="title-l">
-                    Are you SEO Specialist? Write to us!
-                </h1>
-                <p>
-                    Id a ipsum non sit mi, sapien in in netus. Vitae at sagittis magna nam volutpat, massa elementum placerat. Non mi, morbi quisque pellentesque id ac sit. Maecenas elementum nibh fermentum suspendisse et.
-                </p>
-                <form action="post" class="start__form">
-                    <div class="start__form-wrap">
-                        <input type="text" name="name" placeholder="Your Name" class="start__form-inp">
-                    </div>
-                    <div class="start__form-wrap">
-                        <input type="email" name="email" placeholder="E-mail" class="start__form-inp">
-                    </div>
-                    <div class="start__form-wrap cont__form-mess">
-                        <div class="cont__form-wrap">
-                            <input type="text" name="messanger" placeholder="Messenger contact" class="start__form-inp">
-                        </div>
-                    </div>
-                    <div class="start__form-tawrap">
-                        <textarea name="mess" placeholder="Message" class="start__form-inp start__form-ta"></textarea>
-                    </div>
-                    <div class="cont__form-att">
-                        <div class="cont__form-att-wrap" data-fwrap>
-                            <input type="file" name="attach" accept=".pdf,.doc,.docx" class="cont__form-att-inp" id="file" data-att>
-                            <label for="file">
-                                <span class="cont__form-file" data-fname>
-                                    Attach CV
+                <div class="art__wrap" data-blwrap>
+                    <div class="art__sidebar">
+                        <div class="art__sidebar-wrap" data-side>
+                            <div class="art__sidebar-help">
+                                <span>
+                                    Share
                                 </span>
-                                <span class="cont__form-size" data-size>
-                                    pdf, doc, docx
-                                </span>
-                            </label>
-                            <div class="att-clear" data-clear>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"><path d="M1.707.293A1 1 0 1 0 .293 1.707L1.707.293zm10.586 13.414a1 1 0 0 0 1.414-1.414l-1.414 1.414zm1.414-12a1 1 0 0 0 0-1.414 1 1 0 0 0-1.414 0l1.414 1.414zM.293 12.293a1 1 0 0 0 0 1.414 1 1 0 0 0 1.414 0L.293 12.293zm0-10.586l12 12 1.414-1.414-12-12L.293 1.707zm12-1.414l-12 12 1.414 1.414 12-12L12.293.293z" fill="#000"/></svg>
+                                <div class="art__soc">
+                                    <a href class="art__soc-item">
+                                        f
+                                    </a>
+                                    <a href class="art__soc-item">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none"  xmlns:v="https://vecta.io/nano"><path d="M16 1.658a6.95 6.95 0 0 1-1.64 1.826l.01.458c0 .945-.128 1.892-.384 2.839a10.5 10.5 0 0 1-1.173 2.721 10.54 10.54 0 0 1-1.879 2.303c-.727.669-1.601 1.202-2.621 1.599S6.199 14 5.032 14C3.21 14 1.533 13.47 0 12.411a6.59 6.59 0 0 0 .783.049c1.522 0 2.881-.505 4.077-1.514a3.04 3.04 0 0 1-1.906-.706 3.48 3.48 0 0 1-1.159-1.75 3.07 3.07 0 0 0 .618.064c.293 0 .581-.041.864-.123-.757-.163-1.385-.57-1.884-1.219S.645 5.814.645 4.965v-.044a3.06 3.06 0 0 0 1.487.442c-.448-.322-.804-.742-1.067-1.26S.671 3.025.671 2.422c0-.636.148-1.228.444-1.777.823 1.088 1.821 1.958 2.993 2.609S6.537 4.268 7.88 4.34c-.057-.257-.086-.525-.086-.805 0-.976.321-1.809.962-2.499S10.17 0 11.076 0c.948 0 1.747.372 2.397 1.116a6.26 6.26 0 0 0 2.084-.859c-.25.846-.73 1.498-1.442 1.957A6.2 6.2 0 0 0 16 1.658h0z" fill="#00acee"/></svg>
+                                    </a>
+                                    <a href class="art__soc-item">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" fill="none"  xmlns:v="https://vecta.io/nano"><path d="M0 6.098a5.34 5.34 0 0 1 .408-2.077c.259-.629.643-1.207 1.133-1.702.489-.489 1.048-.911 1.662-1.256A7.89 7.89 0 0 1 5.228.265 9.24 9.24 0 0 1 7.437 0c1.151 0 2.223.228 3.217.681a5.98 5.98 0 0 1 2.417 1.978c.621.864.929 1.842.929 2.932a8.72 8.72 0 0 1-.209 1.919c-.138.625-.357 1.232-.653 1.807a6.23 6.23 0 0 1-1.094 1.528c-.446.449-.985.807-1.585 1.052a5.32 5.32 0 0 1-2.067.394c-.494 0-.988-.109-1.475-.327s-.837-.516-1.047-.898l-.309 1.151-.255.97-.224.725c-.074.249-.169.492-.284.726l-.348.637c-.15.273-.319.538-.503.792l-.679.883-.151.05-.1-.102-.164-1.922c0-.626.08-1.329.238-2.11l.728-2.937.567-2.075c-.232-.441-.349-1.017-.349-1.726 0-.566.189-1.096.568-1.595s.86-.745 1.443-.745c.446 0 .792.138 1.039.415s.37.624.37 1.048c0 .45-.16 1.101-.481 1.952s-.481 1.488-.481 1.91c0 .428.164.786.491 1.067s.751.433 1.192.424c.4 0 .771-.085 1.116-.256.339-.166.633-.403.858-.692.491-.629.84-1.344 1.028-2.102l.218-1.134a7.39 7.39 0 0 0 .071-1.017c0-1.178-.4-2.096-1.196-2.754s-1.841-.984-3.122-.984c-1.457 0-2.675.44-3.651 1.324s-1.468 2-1.468 3.357a2.76 2.76 0 0 0 .141.868 2.87 2.87 0 0 0 .294.665l.294.465c.091.145.139.249.139.312 0 .191-.054.439-.162.746s-.245.46-.404.46c-.015 0-.078-.01-.187-.032-.378-.105-.72-.303-.99-.572a2.98 2.98 0 0 1-.666-.965 6.28 6.28 0 0 1-.356-1.104C.043 6.831-.002 6.465 0 6.098z" fill="#bf0e0e"/></svg>
+                                    </a>
+                                    <a href class="art__soc-item">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="12" fill="none"  xmlns:v="https://vecta.io/nano"><path d="M14.5.5h-12a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7a2 2 0 0 0-2-2z" stroke="#080808"/><path d="M3.757 3.071a.5.5 0 1 0-.514.857l.515-.857zM8.5 6.5l-.257.429a.5.5 0 0 0 .515 0L8.5 6.5zm5.257-2.571a.5.5 0 0 0-.514-.857l.514.857zm-10.514 0l5 3 .515-.857-5-3-.514.857zm5.515 3l5-3-.514-.857-5 3 .515.857z" fill="#000"/></svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="start__form-wrapb">
-                        <input type="submit" value="Send application" class="btn send-btn">
+                    <div class="art__text">
+                        <p>
+                            Habitasse consectetur nisl, enim venenatis non integer tellus ultrices elementum. Hendrerit viverra congue gravida purus in id purus natoque laoreet. Sed senectus proin pulvinar amet risus fermentum. Sed non eget et platea mauris. At iaculis a id nisi ut fermentum suspendisse. Egestas enim dignissim tellus neque.
+                        </p>
+                        <h2>
+                            1. Ahrefs — must have SEO софт на любой случай жизни
+                        </h2>
+                        <figure class="wp-block-image">
+                            <img src="img/demo/art-bg.png" alt="">
+                            <figcaption>Ahrefs — топ, даже за свои деньги</figcaption>                            
+                        </figure>
+                        <p>
+                            Id pellentesque ac consectetur a sed rutrum purus. Ipsum erat laoreet et mattis porta elementum, quis pretium imperdiet. Aliquam sed dolor lorem in. Id cras adipiscing tortor purus, ultricies. Consectetur sit egestas nibh gravida non tortor. Sed adipiscing nunc nec vitae aliquam. Pellentesque vitae, platea nam ac. Mattis aenean bibendum egestas tincidunt id. Facilisis sed purus erat nulla at. Vitae purus volutpat ultricies orci, vivamus dui. Elit, enim turpis malesuada feugiat hendrerit. Quis egestas vitae ut sed praesent. Dolor erat sed malesuada magna in. Nisl egestas nunc vulputate magna.
+                        </p>
+                        <p>
+                            Nulla sed aliquet felis, tempor, morbi erat ut aliquam porttitor. Viverra suspendisse commodo risus, congue. Ut aliquet orci quam nunc pharetra purus, ipsum. Vel ornare auctor feugiat tristique sed nec. Lobortis est nulla pellentesque potenti sed. Commodo neque, tortor augue id orci. Arcu vel ante integer orci, convallis. Bibendum vivamus volutpat hendrerit at luctus nibh aliquam
+                        </p>
+                        <h2>
+                            2. Screaming Frog SEO Spider — on-page SEO Must Have
+                        </h2>
+                        <p>
+                            Orci eros, ullamcorper scelerisque eget eget sit magnis cursus. Vitae et praesent elit massa lectus faucibus natoque quis. Vitae magna ornare non neque lacus, quis. Egestas massa ullamcorper feugiat arcu eget condimentum hendrerit vestibulum purus. Risus bibendum habitasse dignissim diam duis. Euismod cras leo aliquam amet id varius egestas fames convallis. Platea nulla laoreet purus ornare eget porta aliquet auctor cursus. Nulla cras odio in eget quisque non aliquam. Elit ornare rutrum egestas dui viverra justo quisque lectus sagittis. Montes, facilisi aliquet tristique vestibulum. Tortor phasellus diam elementum id. Et mollis phasellus massa aliquet malesuada scelerisque imperdiet aliquet. Lectus lorem tempor ipsum blandit porttitor interdum. Est leo cursus ut dolor fermentum lacus nisl gravida.
+                        </p>
                     </div>
-                </form>
+                </div>
             </div>
         </section>
         <footer class="footer">
