--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <!-- Favicon -->
 	<!-- OG Tags -->
 	<meta property="og:title" content="SEO Agency">
@@ -23,7 +24,7 @@
 <body>
     <div class="black-scr" data-blkscr></div>
     <div class="wrap">
-        <header class="header">
+        <header class="header" data-head>
             <div class="container">
                 <div class="header__wrap">
                     <a href="index.html" class="header__logo">
